# lambda-calculus

./: README.md  Setup.hs  lambda-calculus.cabal  stack.yaml
src/: Main.hs  Parser.hs  Preload.hs
src-ag/: Ast.ag  Eval.ag
